# ie-0417

./: .gitignore  .gitmodules  LICENSE  README.md
IE0417-Proyecto/: README.md
LAB6/: README.md  producer_consumer  producer_consumer.cpp  productor_consumidor  productor_consumidor.cpp
LAB7/: README.md  hilos  hilos.cpp  main.cpp  memoria.cpp  programa  sanitizers  sanitizers2
LAB8/: CMakeLists.txt  README.md  authentication.h  mock_database.h  random_seed  random_seed.cpp  test_authentication.cpp  test_random_seed.cpp
Lab2/: README.md
Lab2/Seccion1/: r.md
Lab2/Seccion3/: CMakeLists.txt  Doxyfile  main.cpp  read.md
Lab2/Seccion3/docs/html/: annotated.html  annotated_dup.js  class_data_processor-members.html  class_data_processor.html  class_data_processor.js  class_file_handler-members.html  class_file_handler.html  class_file_handler.js  class_network_client-members.html  class_network_client.html  class_network_client.js  classes.html  doxygen_crawl.html  files.html  functions.html  functions_func.html  globals.html  globals_func.html  globals_vars.html  index.html  main_8cpp.html  main_8cpp.js  navtreedata.js  navtreeindex0.js
Lab2/Seccion3/docs/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_6.js  all_8.js  functions_1.js  functions_4.js  searchdata.js  variables_1.js
Lab2/TaskManagerAI /: netlify.toml
Lab3/: ReadME.md
Lab4 /: ReadME.md
Lab5/: .env  Dockerfile  README.md  docker-compose.yml
Lab5/app/: manage.py  requirements.txt
crm/: Dockerfile  README.md  docker-compose.yml  settings.py
crm/crm/: settings.py  (+1 more)
tareas/: README.md
(+30 files in other folders)
